--- a/index.html
+++ b/index.html
@@ -183,18 +183,18 @@
           <ul class="works__list">
             <li class="works__item">
               <div class="works__item-img"><img src="./img/DAIRY.jpg" alt=""></div>
-              <h3 class="works__item-name">ポートフォリオサイト</h3>
+              <h3 class="works__item-name">DAILY石鹸(shopifyスクール課題)</h3>
               <a href="https://dailyadvance-designcomp.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
             </li>
             <li class="works__item">
-              <div class="work__item-img"><img src="./img/img_works2.jpg" alt=""></div>
-              <h3 class="works__item-name">スイーツ店公式サイト(サンプル)</h3>
-              <a href="#" target="_blank" class="works__item-link">詳しく見る</a>
+              <div class="work__item-img"><img src="./img/EANBE.jpg" alt=""></div>
+              <h3 class="works__item-name">	Eanbeデモサイト(shopifyスクール課題)</h3>
+              <a href="https://tredify-demostore.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
             </li>
             <li class="works__item">
-              <div class="work__item-img"><img src="./img/img_works3.jpg" alt=""></div>
-              <h3 class="works__item-name">家具のサブスクLP(サンプル)</h3>
-              <a href="https://admin.shopify.com/store/dailyadvance-designcomp/themes/141823344733/editor?previewPath=%2F%3F_bt%3DeyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaEpJaXBrWVdsc2VXRmtkbUZ1WTJVdFpHVnphV2R1WTI5dGNDNXRlWE5vYjNCcFpua3VZMjl0QmpvR1JWUT0iLCJleHAiOiIyMDI1LTA4LTExVDAzOjExOjQ5Ljk1M1oiLCJwdXIiOiJwZXJtYW5lbnRfcGFzc3dvcmRfYnlwYXNzIn19--a8b7d00721c060f9edc42d4606f53613fa11a96d" target="_blank" class="works__item-link">詳しく見る</a>
+              <div class="work__item-img"><img src="./img/sobolon.jpg" alt=""></div>
+              <h3 class="works__item-name">sobolon(LPスクール課題)</h3>
+              <a href="http://127.0.0.1:5500/index.html" target="_blank" class="works__item-link">詳しく見る</a>
             </li>
           </ul>
         </div>
