--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </a>
               </li>
               <li class="header__nav-item">
-                <a href="#Work flow -" class="header__nav-link button">
+                <a href="#Workflow" class="header__nav-link button">
                   <span class="button__icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -78,7 +78,7 @@
                         class="button__icon-path" />
                     </svg>
                   </span>
-                  <span class="button__text">Workflow -</span>
+                  <span class="button__text">Work flow -</span>
                 </a>
               </li>
               <li class="header__nav-item">
@@ -204,14 +204,14 @@
       <section id="about" class="section about">
       <div class="section__inner">
         <div class="about__container">
-          <div class="about__img"><img src="./img/img_about.png" alt=""></div>
+          <div class="about__img"><img src="./img/profile.jpeg" alt=""></div>
           <div class="about__text-contents">
             <h2 class="section__head">
               <span class="section__head-main">About</span>
               <span class="section__head-sub">私について</span>
             </h2>
             <p class="about__text">1994年生まれ、東京在住。大学卒業後、不動産業界と物流業界を経験しました。現在は家庭と両立しながら、web制作を行っております。</p>
-            <p class="about__text">趣味はライブ参戦、アニメ鑑賞です。</p>
+            <p class="about__text">趣味はライブ参戦、サウナです。</p>
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
           <span class="section__head-main">Contact -</span>
           <span class="section__head-sub">お問い合わせ</span>
         </h2>
-        <a href="#" target="_blank" class="page-bottom__button button button--border">
+        <a href="#Contact" target="_blank" class="page-bottom__button button button--border">
           <span class="button__icon">
             <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -290,12 +290,12 @@
         </a>
       </div>
     
-      <div class="page-bottom__item page-bottom__item--twitter">
-        <h2 class="section__head section__head--center">
+      <div id="Twitter" class="page-bottom__item page-bottom__item--twitter">
+        <h2  class="section__head section__head--center">
           <span class="section__head-main">Twitter -</span>
           <span class="section__head-sub">ツイッター</span>
         </h2>
-        <a href="#" target="_blank" class="page-bottom__button button button--border">
+        <a href="#Twitter" target="_blank" class="page-bottom__button button button--border">
           <span class="button__icon">
             <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
             xmlns="http://www.w3.org/2000/svg">
