--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <!-- 検索にヒットさせない -->
   <meta name="robots" content="noindex" />
   <title>ポートフォリオサイト</title>
-  <meta name="description"
-    content="フリーランスWEB制作コーダーのTakafumiのポートフォリオサイトです。「WEB制作を頼みたい」「既存のWebサイトを修正・改善したい」などぜひ、ぜひ、お気軽にご相談ください。">
+  <meta name="description" content="
+      WEBコーダーとしてスキルを磨いている井上と申します。
+      HTML/CSSを中心にWeb制作に取り組んでおり、Shopify構築やLiquidによるテーマカスタマイズにも対応可能です。
+      今後は、より多くの経験を積みながら、チームでの開発にも挑戦したく、転職を目指しています。
+      ">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -132,181 +135,183 @@
         <div class="fv__contents">
           <h1 class="fv__heading">
             <span class="fv__heading-main">Web Corder -</span>
-            <span class="fv__heading-sub">ご覧いただきありがとうございます。<br>フリーランスでWEBコーダーをしている井上と申します。</span>
+            <span class="fv__heading-sub">WEBコーダーとしてスキルを磨いている井上と申します。<br>
+              HTML/CSSを中心にWeb制作に取り組んでおり、Shopify構築やLiquidによるテーマカスタマイズにも対応可能です。<br>
+             </span>
           </h1>
         </div>
       </div>
-    
+
 
       <section id="service" class="section service">
-      <div class="section__inner">
-        <h2 class="section__head">
-          <span class="section__head-main">Service -</span>
-          <span class="section__head-sub">提供サービス</span>
-        </h2>
-        <p class="section__lead-text">
-          行っているサービス内容です。「Web制作を頼みたい」「既存のWebサイトを修正・改善したい」など、是非、お気軽にご相談ください。
-        </p>
-        <div class="section__contents">
-          <ul class="service__list">
-            <li class="service__item">
-              <div class="service__item-img"><img src="./img/img_service1.svg" alt=""></div>
-              <h3 class="service__item-name">ホームページ制作</h3>
-              <p class="service__item-text">ご要望に応じて柔軟にご提案させていただきます。目的を達成するためのホームページを一緒に作成していきましょう！</p>
-            </li>
-            <li class="service__item">
-              <div class="service__item-img"><img src="./img/img_service2.svg" alt=""></div>
-              <h3 class="service__item-name">ホームページ修正</h3>
-              <p class="service__item-text">文言の変更や表示崩れなどホームページでのちょっとしたお困りごとに対応いたします。</p>
+        <div class="section__inner">
+          <h2 class="section__head">
+            <span class="section__head-main">Service -</span>
+            <span class="section__head-sub">提供サービス</span>
+          </h2>
+          <p class="section__lead-text">
+            行っているサービス内容です。「Web制作を頼みたい」「既存のWebサイトを修正・改善したい」など、是非、お気軽にご相談ください。
+          </p>
+          <div class="section__contents">
+            <ul class="service__list">
+              <li class="service__item">
+                <div class="service__item-img"><img src="./img/img_service1.svg" alt=""></div>
+                <h3 class="service__item-name">ホームページ制作</h3>
+                <p class="service__item-text">ご要望に応じて柔軟にご提案させていただきます。目的を達成するためのホームページを一緒に作成していきましょう！</p>
+              </li>
+              <li class="service__item">
+                <div class="service__item-img"><img src="./img/img_service2.svg" alt=""></div>
+                <h3 class="service__item-name">ホームページ修正</h3>
+                <p class="service__item-text">文言の変更や表示崩れなどホームページでのちょっとしたお困りごとに対応いたします。</p>
 
-            </li>
-            <li class="service__item">
-              <div class="service__item-img"><img src="./img/img_service3.svg" alt=""></div>
-              <h3 class="service__item-name">ホームページ相談</h3>
-              <p class="service__item-text">ホームページ制作に関するご相談を無料でお受けしております。些細なことでもお気軽にご相談ください！</p>
-            </li>
-          </ul>
+              </li>
+              <li class="service__item">
+                <div class="service__item-img"><img src="./img/img_service3.svg" alt=""></div>
+                <h3 class="service__item-name">ホームページ相談</h3>
+                <p class="service__item-text">ホームページ制作に関するご相談を無料でお受けしております。些細なことでもお気軽にご相談ください！</p>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       </section>
 
       <section id="works" class="section works">
-      <div class="section__inner">
-        <h2 class="section__head">
-          <span class="section__head-main">Works -</span>
-          <span class="section__head-sub">実績紹介</span>
-        </h2>
-        <p class="section__lead-text">
-          これまで制作したWebサイトです。また、当サイトも自ら制作していますので実績の一つとしてご覧ください。
-        </p>
-        <div class="section__contents">
-          <ul class="works__list">
-            <li class="works__item">
-              <div class="works__item-img"><img src="./img/DAIRY.jpg" alt=""></div>
-              <h3 class="works__item-name">DAILY石鹸(shopifyスクール課題)</h3>
-              <a href="https://dailyadvance-designcomp.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
-            </li>
-            <li class="works__item">
-              <div class="work__item-img"><img src="./img/EANBE.jpg" alt=""></div>
-              <h3 class="works__item-name">	Eanbeデモサイト(shopifyスクール課題)</h3>
-              <a href="https://tredify-demostore.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
-            </li>
-            <li class="works__item">
-              <div class="work__item-img"><img src="./img/sobolon.jpg" alt=""></div>
-              <h3 class="works__item-name">sobolon(LPスクール課題)</h3>
-              <a href="http://127.0.0.1:5500/index.html" target="_blank" class="works__item-link">詳しく見る</a>
-            </li>
-          </ul>
+        <div class="section__inner">
+          <h2 class="section__head">
+            <span class="section__head-main">Works -</span>
+            <span class="section__head-sub">実績紹介</span>
+          </h2>
+          <p class="section__lead-text">
+            これまで制作したWebサイトです。また、当サイトも自ら制作していますので実績の一つとしてご覧ください。
+          </p>
+          <div class="section__contents">
+            <ul class="works__list">
+              <li class="works__item">
+                <div class="works__item-img"><img src="./img/DAIRY.jpg" alt=""></div>
+                <h3 class="works__item-name">DAILY石鹸 (shopifyスクール課題) <br> PW:portfolio</h3>
+                <a href="https://dailyadvance-designcomp.myshopify.com/" target="_blank"
+                  class="works__item-link">詳しく見る</a>
+              </li>
+              <li class="works__item">
+                <div class="work__item-img"><img src="./img/EANBE.jpg" alt=""></div>
+                <h3 class="works__item-name"> Eanbeデモサイト(shopifyスクール課題) <br> PW:Eanbe</h3>
+                <a href="https://tredify-demostore.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
+              </li>
+              <li class="works__item">
+                <div class="work__item-img"><img src="./img/sobolon.jpg" alt=""></div>
+                <h3 class="works__item-name">sobolon(LPスクール課題)</h3>
+                <a href="http://127.0.0.1:5500/index.html" target="_blank" class="works__item-link">詳しく見る</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       </section>
 
       <section id="about" class="section about">
-      <div class="section__inner">
-        <div class="about__container">
-          <div class="about__img"><img src="./img/profile.jpeg" alt=""></div>
-          <div class="about__text-contents">
-            <h2 class="section__head">
-              <span class="section__head-main">About</span>
-              <span class="section__head-sub">私について</span>
-            </h2>
-            <p class="about__text">1994年生まれ、東京在住。大学卒業後、不動産業界と物流業界を経験しました。現在は家庭と両立しながら、web制作を行っております。</p>
-            <p class="about__text">趣味はライブ参戦、サウナです。</p>
+        <div class="section__inner">
+          <div class="about__container">
+            <div class="about__img"><img src="./img/profile.jpeg" alt=""></div>
+            <div class="about__text-contents">
+              <h2 class="section__head">
+                <span class="section__head-main">About</span>
+                <span class="section__head-sub">私について</span>
+              </h2>
+              <p class="about__text">1994年生まれ、東京在住。これまで不動産・物流業界で働いてきましたが、現在はWeb制作に挑戦中です。</p>
+              <p class="about__text">ライブ参戦とサウナでリフレッシュするのが日課です。</p>
+            </div>
           </div>
         </div>
-      </div>
-     </section>
+      </section>
 
       <section id="flow" class="section flow">
-      <div class="section__inner">
-        <h2 class="section__head">
-          <span class="section__head-main">Work Flow -</span>
-          <span class="section__head-sub">制作の流れ</span>
-        </h2>
-      </div>
-      <p class="section__lead-text">
-        ご相談〜納品までの大まかな流れです。状況に応じて柔軟に対応いたします。
-      </p>
-      <ol class="flow__list">
-        <li class="flow__item">
-          <p class="flow__item-num">1</p>
-          <p class="flow__item-img"><img src="./img/img_flow1.svg" alt=""></p>
-          <h3 class="flow__item-name">ご相談・お見積もり</h3>
-          <p class="flow__item-text">要件や納期、予算などお気軽にご相談ください。<br>対応内容に応じてお見積もりをお送りいたします。</p>
-        </li>
-        <li class="flow__item">
-          <p class="flow__item-num">2</p>
-          <p class="flow__item-img"><img src="./img/img_flow2.svg" alt=""></p>
-          <h3 class="flow__item-name">コーディング</h3>
-          <p class="flow__item-text">デザインカンプを元にコーディングを行います。コーディング後は品質チェックをし調整いたします。</p>
-        </li>
-        <li class="flow__item">
-          <p class="flow__item-num">3</p>
-          <p class="flow__item-img"><img src="./img/img_flow3.svg" alt=""></p>
-          <h3 class="flow__item-name">確認</h3>
-          <p class="flow__item-text">お客様にコーディングしたサイトをご確認いただきます。不足分の修正と対応を行います。</p>
-        </li>
-        <li class="flow__item">
-          <p class="flow__item-num">4</p>
-          <p class="flow__item-img"><img src="./img/img_flow3.svg" alt=""></p>
-          <h3 class="flow__item-name">納品</h3>
-          <p class="flow__item-text">コーディング後のファイル一式を納品いたします。<br>本番サーバーへのアップロードも対応可能です。</p>
-        </li>
-      </ol>
+        <div class="section__inner">
+          <h2 class="section__head">
+            <span class="section__head-main">Work Flow -</span>
+            <span class="section__head-sub">制作の流れ</span>
+          </h2>
+        </div>
+        <p class="section__lead-text">
+          ご相談〜納品までの大まかな流れです。状況に応じて柔軟に対応いたします。
+        </p>
+        <ol class="flow__list">
+          <li class="flow__item">
+            <p class="flow__item-num">1</p>
+            <p class="flow__item-img"><img src="./img/img_flow1.svg" alt=""></p>
+            <h3 class="flow__item-name">ご相談・お見積もり</h3>
+            <p class="flow__item-text">要件や納期、予算などお気軽にご相談ください。<br>対応内容に応じてお見積もりをお送りいたします。</p>
+          </li>
+          <li class="flow__item">
+            <p class="flow__item-num">2</p>
+            <p class="flow__item-img"><img src="./img/img_flow2.svg" alt=""></p>
+            <h3 class="flow__item-name">コーディング</h3>
+            <p class="flow__item-text">デザインカンプを元にコーディングを行います。コーディング後は品質チェックをし調整いたします。</p>
+          </li>
+          <li class="flow__item">
+            <p class="flow__item-num">3</p>
+            <p class="flow__item-img"><img src="./img/img_flow3.svg" alt=""></p>
+            <h3 class="flow__item-name">確認</h3>
+            <p class="flow__item-text">お客様にコーディングしたサイトをご確認いただきます。不足分の修正と対応を行います。</p>
+          </li>
+          <li class="flow__item">
+            <p class="flow__item-num">4</p>
+            <p class="flow__item-img"><img src="./img/img_flow3.svg" alt=""></p>
+            <h3 class="flow__item-name">納品</h3>
+            <p class="flow__item-text">コーディング後のファイル一式を納品いたします。<br>本番サーバーへのアップロードも対応可能です。</p>
+          </li>
+        </ol>
       </section>
 
       <section id="section" class="section message">
-      <div class="section__inner">
-        <div class="message__container">
-          <div class="message__img"><img src="./img/img_message.png" alt=""></div>
-          <div class="message__text-contents">
-            <h2 class="section__head">
-              <span class="section__head-main">Messasge -</span>
-              <span class="section__head-sub">ご依頼をお考えの方へ</span>
-            </h2>
-            <p class="message__text">静的なHTMLコーディングからWordPress化まで対応可能です。<br>デザインカンプの意図をしっかりと理解した上で、迅速、丁寧な対応でコーディング業務をサポートいたします！
-            </p>
+        <div class="section__inner">
+          <div class="message__container">
+            <div class="message__img"><img src="./img/img_message.png" alt=""></div>
+            <div class="message__text-contents">
+              <h2 class="section__head">
+                <span class="section__head-main">Messasge -</span>
+                <span class="section__head-sub">ご依頼をお考えの方へ</span>
+              </h2>
+              <p class="message__text">静的なHTMLコーディングから、Shopifyを活用したECサイト構築まで幅広く対応可能です。<br>
+                Liquidによる柔軟なカスタマイズで、デザインの意図を最大限に活かしたサイト制作を実現します。
+              </p>
+            </div>
           </div>
-        </div>
         </div>
       </section>
 
       <div class="page-bottom">
-      <div class="page-bottom__item page-bottom__item--contact">
-        <h2 class="section__head section__head--center">
-          <span class="section__head-main">Contact -</span>
-          <span class="section__head-sub">お問い合わせ</span>
-        </h2>
-        <a href="#Contact" target="_blank" class="page-bottom__button button button--border">
-          <span class="button__icon">
-            <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z"
-              class="button__icon-path "  />
-            </svg>
-          </span>
-          <span class="button__text">Contact -</span>
-        </a>
-      </div>
-    
-      <div id="Twitter" class="page-bottom__item page-bottom__item--twitter">
-        <h2  class="section__head section__head--center">
-          <span class="section__head-main">Twitter -</span>
-          <span class="section__head-sub">ツイッター</span>
-        </h2>
-        <a href="#Twitter" target="_blank" class="page-bottom__button button button--border">
-          <span class="button__icon">
-            <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M17.9441 6.40799C17.9568 6.58444 17.9568 6.76092 17.9568 6.93736C17.9568 12.3191 13.8325 18.5201 6.29441 18.5201C3.97207 18.5201 1.81473 17.8521 0 16.6926C0.329961 16.7304 0.647187 16.743 0.989844 16.743C2.90605 16.743 4.67004 16.1002 6.07867 15.0037C4.27664 14.9659 2.76648 13.7937 2.24617 12.1805C2.5 12.2183 2.75379 12.2435 3.02031 12.2435C3.38832 12.2435 3.75637 12.193 4.09898 12.1049C2.22082 11.7267 0.812148 10.0883 0.812148 8.10949V8.05909C1.35781 8.36158 1.99238 8.55063 2.66492 8.57581C1.56086 7.84479 0.837539 6.59704 0.837539 5.18543C0.837539 4.42922 1.04055 3.73602 1.3959 3.13105C3.41367 5.60136 6.44668 7.21459 9.84766 7.39107C9.78422 7.08858 9.74613 6.77353 9.74613 6.45843C9.74613 4.21496 11.5736 2.38745 13.8451 2.38745C15.0253 2.38745 16.0913 2.87899 16.84 3.67302C17.7664 3.49658 18.6547 3.15626 19.4416 2.68994C19.137 3.63523 18.4898 4.42926 17.6395 4.93337C18.4644 4.84519 19.2639 4.61827 19.9999 4.30322C19.4416 5.10981 18.7436 5.82819 17.9441 6.40799Z"
-              class="button__icon-path" />
-          </svg>
-        </span>
-        <span class="button__text">Twitter -</span>
-        </a>
-      </div>
+        <div class="page-bottom__item page-bottom__item--contact">
+          <h2 class="section__head section__head--center">
+            <span class="section__head-main">Contact -</span>
+            <span class="section__head-sub">お問い合わせ</span>
+          </h2>
+          <a href="#Contact" target="_blank" class="page-bottom__button button button--border">
+            <span class="button__icon">
+              <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z"
+                  class="button__icon-path " />
+              </svg>
+            </span>
+            <span class="button__text">Contact -</span>
+          </a>
+        </div>
+
+        <div id="Twitter" class="page-bottom__item page-bottom__item--twitter">
+          <h2 class="section__head section__head--center">
+            <span class="section__head-main">Twitter -</span>
+            <span class="section__head-sub">ツイッター</span>
+          </h2>
+          <a href="#Twitter" target="_blank" class="page-bottom__button button button--border">
+            <span class="button__icon">
+              <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M17.9441 6.40799C17.9568 6.58444 17.9568 6.76092 17.9568 6.93736C17.9568 12.3191 13.8325 18.5201 6.29441 18.5201C3.97207 18.5201 1.81473 17.8521 0 16.6926C0.329961 16.7304 0.647187 16.743 0.989844 16.743C2.90605 16.743 4.67004 16.1002 6.07867 15.0037C4.27664 14.9659 2.76648 13.7937 2.24617 12.1805C2.5 12.2183 2.75379 12.2435 3.02031 12.2435C3.38832 12.2435 3.75637 12.193 4.09898 12.1049C2.22082 11.7267 0.812148 10.0883 0.812148 8.10949V8.05909C1.35781 8.36158 1.99238 8.55063 2.66492 8.57581C1.56086 7.84479 0.837539 6.59704 0.837539 5.18543C0.837539 4.42922 1.04055 3.73602 1.3959 3.13105C3.41367 5.60136 6.44668 7.21459 9.84766 7.39107C9.78422 7.08858 9.74613 6.77353 9.74613 6.45843C9.74613 4.21496 11.5736 2.38745 13.8451 2.38745C15.0253 2.38745 16.0913 2.87899 16.84 3.67302C17.7664 3.49658 18.6547 3.15626 19.4416 2.68994C19.137 3.63523 18.4898 4.42926 17.6395 4.93337C18.4644 4.84519 19.2639 4.61827 19.9999 4.30322C19.4416 5.10981 18.7436 5.82819 17.9441 6.40799Z"
+                  class="button__icon-path" />
+              </svg>
+            </span>
+            <span class="button__text">Twitter -</span>
+          </a>
+        </div>
       </div>
 
       <footer class="footer">
