--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </li>
               <li class="works__item">
                 <div class="work__item-img"><img src="./img/EANBE.jpg" alt=""></div>
-                <h3 class="works__item-name"> Eanbeデモサイト(shopifyスクール課題) <br> PW:Eanbe</h3>
+                <h3 class="works__item-name"> Eanbeデモサイト(shopifyスクール課題) <br> PW:portfolio</h3>
                 <a href="https://tredify-demostore.myshopify.com/" target="_blank" class="works__item-link">詳しく見る</a>
               </li>
               <li class="works__item">
